<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/item_home"
            android:title="@string/home_page" />

        <item
            android:id="@+id/flashlightsFragment"
            android:icon="@drawable/item_flashlights"
            android:title="@string/flashlights_page" />

        <item
            android:id="@+id/coloredLightsFragment"
            android:icon="@drawable/item_colored_lights"
            android:title="@string/colored_lights_page"

            />

        <item
            android:id="@+id/sosAlertsFragment"
            android:icon="@drawable/item_sos"
            android:title="@string/sos_alerts_page" />
</menu>