<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_135sdp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">


    <ImageView
        android:id="@+id/imgItemColoredLights"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:contentDescription="@string/image_flashlights"
        android:scaleType="centerCrop"
        android:src="@color/uiOne" />

    <LinearLayout
        android:layout_width="@dimen/_230sdp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_73sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameColoredLights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/deneme"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCategoryColoredLights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDownloadValueColoredLights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_4ssp"
            android:fontFamily="@font/myfont"
            android:text="@string/download"
            android:textColor="#EB434040"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/item_download" />

        <TextView
            android:id="@+id/tvStarValueColoredLights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_4ssp"
            android:fontFamily="@font/myfont"
            android:text="@string/star"
            android:textColor="#EB434040"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/item_star" />

        <TextView
            android:id="@+id/tvRatingCountColoredLights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_4ssp"
            android:fontFamily="@font/myfont"
            android:text="@string/rating_value"
            android:textColor="#EB434040"
            android:textSize="@dimen/_10ssp"
            app:drawableStartCompat="@drawable/score_item" />

    </LinearLayout>

</androidx.cardview.widget.CardView>