<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:background="#023047">


    <LinearLayout
        android:id="@+id/llFlashlightsCategories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/uiTwo"
        android:orientation="vertical"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llColoredLights">

        <TextView
            android:id="@+id/tvFlashlightsCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text= "@string/flashlights_categories"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFlashlights"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imgFlashlights"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/uiFour"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_home_flashlights_categories"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llColoredLights"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/uiTwo"
        android:orientation="vertical"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llFlashlightsCategories" >

        <TextView
            android:id="@+id/tvColoredLights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/colored_lights"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardColoredLights"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imgColoredLights"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/uiFour"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_home_colored_lights_categories"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSosAlerts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/uiTwo"
        android:orientation="vertical"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llColoredLights" >

        <TextView
            android:id="@+id/tvSosAlerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/sos_alerts"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSosAlerts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imgSosAlerts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/uiFour"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_home_sos_alerts_categories"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>